--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@sailshq/socket.io-redis": "^5.2.0",
     "axios": "^1.4.0",
     "bcrypt-nodejs": "^0.0.3",
+    "cheerio": "^1.0.0-rc.12",
     "grunt": "1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "node-cron": "^3.0.2",
+    "node-geocoder": "^4.2.0",
     "nodemailer": "^6.7.0",
     "nodemailer-smtp-transport": "^2.7.4",
+    "puppeteer": "^20.5.0",
     "sails": "^1.4.2",
     "sails-hook-grunt": "^4.0.0",
     "sails-hook-orm": "^3.0.2",
